Fix spacing

--- a/app/content/css/challenges.scss
+++ b/app/content/css/challenges.scss
@@ -95,6 +95,7 @@
           }
           .col2{
             width: 39.5%;
+            padding-left: 10px;
           }
           .col3{
             width: 18.5%;
